Opened 10 years ago

Closed 5 years ago

Last modified 5 years ago

#11949 closed bug (fixed)

Terminal fullscreen does not cover full screen width

Reported by: stargater Owned by: jackburton
Priority: normal Milestone: R1/beta2
Component: Applications/Terminal Version: R1/Development
Keywords: Fullscreen Cc:
Blocked By: Blocking: #14543
Platform: All

Description

When i used Terminal in Fullscreen then it is broken, i have on the right side free spaces, so it fill not my desktop.

I show the code and i see some ugly code e.g ResizeTo before MoveTo and Frame() handling to save the last window size and position.

fSavedFrame = Frame(); ? why. You mean the Window Frame!

The theory are: Set some Window flags/looks e.g: B_NOT_RESIZABLE, etc. BScreen screen(this); ResizeTo(screen.Frame().Width(), screen.Frame().Height();

terminal/TermWindow.cpp 884 found the code.

My screen are 1920x1080 pixels.

Thanks

Change History (11)

comment:1 by Janus, 10 years ago

The code seems fine to me. The fSavedFrame is used when the terminal exits fullscreen to set the old window size.

Could you try this:

1) open a terminal in the first workspace (only one window) 2) go to fullscreen mode (alt-return) 3) quit the terminal in fullscreen (alt-Q) 4) reopen the terminal and type this command:

message /boot/home/config/settings/Terminal/Windows

5) post the output.

Do you have this problem with other resolutions?

Thanks.

comment:2 by pulkomandy, 10 years ago

I think there is a limitation to the maximal width of terminal windows. IIRC it is somewhere around 256 characters, as anything above that has problems with using curses applications (some infos such as window size, mouse coordinates are sent as 8 bit values). It is possible to make the window bigger but such apps could run into problems because of this, so we must not allow mouse clicks after the 256th column, make sure the window size is properly reported (or clipped), etc.

comment:3 by pulkomandy, 10 years ago

Milestone: R1/beta1R1

comment:4 by Janus, 10 years ago

I can go fullscreen without problem in 1920x1080. I have set the font to a bigger size than the default, this explain the different behaviour.

Last edited 10 years ago by Janus (previous) (diff)

comment:5 by stargater, 10 years ago

Can we calculate the min font size by screen size? So can we set a new min. fon size when we used fullscreen.

comment:6 by KapiX, 6 years ago

Would adding an option to disable this limitation make sense?

Having an option would achieve two things:

  1. Communicate that "it's not a bug, it's a feature".
  2. Let people, who know what they're doing, to opt-out (and perhaps prompt others to consult the User Guide).

I don't use curses applications, and I want fullscreen mode to be fullscreen.

In case of this limit enabled and font being too small, I think it would be good to not allow fullscreen mode at all and show a message box explaining why it's disabled.

comment:7 by pulkomandy, 6 years ago

It's not a feature. I mentionned curses app as the reason why there is a bug, but we should remove the limitation and fix what that uncovers.

Fullscreen should be fullscreen, that's all.

The issue is/was also addressed in other terminals, we'll need to switch to some extended escape sequences that remove the limitation, that's all.

comment:8 by pulkomandy, 6 years ago

Summary: Termianl fullscreen are brokenTerminal fullscreen does not cover full screen width

comment:9 by diver, 6 years ago

Blocking: 14543 added

comment:10 by stippi, 5 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev53544.

comment:11 by nielx, 5 years ago

Milestone: R1R1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.