src/apps/terminal/TerminalBuffer.h
@@ -60,6 +60,7 @@ public:
 			void				ReportNormalMouseEvent(bool report);
 			void				ReportButtonMouseEvent(bool report);
 			void				ReportAnyMouseEvent(bool report);
+			void				EnableExtendedMouseCoordinates(bool enable);
 
 protected:
 	virtual	void				NotifyListener();
